--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -8,6 +8,15 @@ mainClassName = "Main"
 group 'com.stamacake'
 version '0.01'
 
+test {
+    useTestNG()
+}
+
+dependencies{
+    // https://mvnrepository.com/artifact/org.testng/testng
+    testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
+}
+
 repositories {
     mavenCentral()
 }
